ukui-bluetooth (1.0.0-1kylin1k51) v101; urgency=medium

  * Bug  :
    - bug#63127 深色主题下，文件传输界面wps文件图标未反白
    - bug#63068 发送的文件名称中存在空格时，在传输界面显示“%20”
    - bug#62801 以蓝牙开启状态重启后，蓝牙为关闭状态，任务栏蓝牙图标为开启
    - bug#59301 传输成功小窗未关闭，无法进行再一次传输(dengtuo)
  * Task :
  * Other:

 -- guang tang <tangguang@kylinos.cn>  Thu, 24 Jun 2021 11:16:31 +0800

ukui-bluetooth (1.0.0-1kylin1k50) v101; urgency=medium

  * Bug  :
    -  bug#59301 传输成功小窗未关闭，无法进行再一次传输(dengtuo)
    -  bug#63109 控制面板、托盘处蓝牙的状态与任务栏显示的状态不一致
  * Task :
  * Other: 

 -- guang tang <tangguang@kylinos.cn>  Wed, 23 Jun 2021 09:44:36 +0800

ukui-bluetooth (1.0.0-1kylin1k49) v101; urgency=medium
  
  * Bug  :
    - bug#59337 【通知】连接成功的语句不通顺，需去掉“的” (lizhuoheng)
    - bug#59653  CPM蓝牙关开，鼠标回连需要12s (dengtuo)
  * Task :
  * Other:

 -- guang tang <tangguang@kylinos.cn>  Tue, 15 Jun 2021 14:03:33 +0800

ukui-bluetooth (1.0.0-1kylin1k48) v101; urgency=medium

  * Bug  :
    - bug#60919 右键发送文件只蓝牙窗口，文件类型图标不对+6407
  * Task :
  * Other:

 -- guang tang <tangguang@kylinos.cn>  Fri, 11 Jun 2021 11:15:38 +0800

ukui-bluetooth (1.0.0-1kylin1k47) v101; urgency=medium

  * Bug  :
    - bug#56841 蓝牙鼠标配对连接上后又断开连接后正常(dengtuo)
  * Task : 
  * Other: 

 -- guang tang <tangguang@kylinos.cn>  Thu, 10 Jun 2021 11:25:46 +0800

ukui-bluetooth (1.0.0-1kylin1k46) v101; urgency=medium

  * Bug  :
    - bug#55733 :深色模式下，文件发送失败提示“传输失败”没有显示
  * Task :
  * Other:
    - 优化文件传输的文件类型图标
    - 去除任务栏托盘的提示信息

 -- guang tang <tangguang@kylinos.cn>  Fri, 28 May 2021 10:47:15 +0800

ukui-bluetooth (1.0.0-1kylin1k45) v101; urgency=medium

  * Bug  ：
    - bug#53893: 连接蓝牙键盘时弹出的窗口没有居中显示
    - bug#53345: 开关pc蓝牙开关或者重启PC，蓝牙耳机不回连
    - bug#53893: 连接蓝牙键盘时弹出的窗口没有居中显示
  * Task :
  * Other:

 -- guang tang <tangguang@kylinos.cn>  Tue, 18 May 2021 10:14:03 +0800

ukui-bluetooth (1.0.0-1kylin1k44) v101; urgency=medium

  * Bug  :
    - bug#52807 :没有蓝牙功能的机器，蓝牙被会话管理器拉起，并异常退出返回退出码255
  * Task :
  * Other:
    - 关闭蓝牙时更新rfkill的状态
